# rust-azure-storage-uploader

./: Cargo.toml  readme.md
src/: main.rs
