[package]
name = "azure-storage-uploader"
version = "0.20.0"
edition = "2021"
default-run = "azure-storage-uploader"

[dependencies]
azure_core = "0.20"
azure_identity = "0.20"
azure_storage = "0.20"
azure_svc_blobstorage = "0.20"
azure_storage_blobs = "0.20.0"
bytes = "1.0"
time = "0.3.10"
futures = "0.3"
tracing = "0.1.40"
md5 = {version="0.7", optional=true}
url = "2.2"
tokio = { version = "1.38.0", features = ["full"] }
druid = "0.8.3"
indicatif = "0.17.8"
winapi = "0.3"

[[bin]]
name = "azure-storage-uploader"
path = "src/main.rs"
